@@ -1,3 +1,4 @@
+* Permit to remove ignored invoices and stock moves
 
 Version 7.0.0 - 2023-10-30
 --------------------------
